Update upcoming releases
- Remove 18.0.
- Added a couple more things to 18.1.
- Updated supported versions table.

--- a/docs/pages/upcoming-releases.mdx
+++ b/docs/pages/upcoming-releases.mdx
@@ -14,46 +14,15 @@ We plan to release the following versions in the coming months:
 
 | Version | Date                   |
 |---------|------------------------|
-| 18.0.0  | Week of July 7, 2025   |
 | 18.1.0  | Week of August 4, 2025 |
 
 We continue to support the following major versions of Teleport:
 
 | Release | Release Date      | EOL            | Minimum `tsh` version |
 |---------|-------------------|----------------|-----------------------|
+| v18.x   | July 3, 2025      | August 2026    | v17.0.0               |
 | v17.x   | November 16, 2024 | February 2026  | v16.0.0               |
 | v16.x   | June 14, 2024     | October 2025   | v15.0.0               |
-| v15.x   | January 29, 2024  | June 2025      | v14.0.0               |
-
-### 18.0.0
-
-#### Identity Activity Center
-
-Teleport Identity Security (fka Teleport Policy) will provide an Identity Activity
-Center to allow users to correlate user activity by multiple factors to facilitate
-incident response. The first iteration will support integrations with GitHub, Okta
-and AWS.
-
-#### Automatic access request reviews
-
-Teleport will provide the ability to perform automatic access request reviews based
-on requested roles out of the box.
-
-#### Multi-session MFA for Database Access
-
-Teleport will provide a more user-friendly way to execute queries on multiple
-databases when per-session MFA is enabled, without requiring MFA tap for each
-connection.
-
-#### RBAC for SAML applications
-
-Users will be able to control access to SAML applications using role labels
-similar to other Teleport-protected resources.
-
-#### Database health checks
-
-Teleport will support periodic connectivity checks for connected databases
-and expose database health information to users via web UI and CLI/API.
 
 ### 18.1.0
 
@@ -67,6 +36,16 @@ Teleport will provide the ability to integrate with Hardware Security Modules
 Teleport VNet will add native support for SSH, enabling any SSH client to connect
 to Teleport SSH servers with zero configuration. Advanced Teleport features like
 per-session MFA will have first-class support for a seamless user experience.
+
+#### Sailpoint SCIM integration
+
+Teleport will support Sailpoint as a SCIM provider allowing to synchronize Sailpoint
+entitlement groups with Teleport access lists.
+
+#### Improved access requests UX
+
+Teleport web UI will make a better distinction between just-in-time and long-term
+access request UX.
 
 ## Teleport Cloud
 
