--- a/docs/pages/upcoming-releases.mdx
+++ b/docs/pages/upcoming-releases.mdx
@@ -37,6 +37,19 @@ Teleport VNet will add native support for SSH, enabling any SSH client to connec
 to Teleport SSH servers with zero configuration. Advanced Teleport features like
 per-session MFA will have first-class support for a seamless user experience.
 
+#### Identifier-first login
+
+Teleport will add support for identifier-first login flows. When enabled, the initial
+login screen will contain only a username prompt. Users will be presented with the 
+SSO connectors that apply to them after submitting their username.
+
+#### Bound keypair joining for Machine ID
+
+The new bound keypair join method for Machine ID is a more secure and user-friendly
+alternative to token joining in both on-prem environments and cloud providers without
+a delegated join method. It allows for automatic self-recovery in case of expired client
+certificates and gives administrators new options to manage and automate bot joining.
+
 #### Sailpoint SCIM integration
 
 Teleport will support Sailpoint as a SCIM provider allowing to synchronize Sailpoint
