--- a/docs/pages/reference/terraform-provider-mwi/data-sources/data-sources.mdx
+++ b/docs/pages/reference/terraform-provider-mwi/data-sources/data-sources.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Terraform data-sources index"
-description: "Index of all the data-sources supported by the Teleport Terraform Provider"
+description: "Index of all the data-sources supported by the Teleport MWI Terraform Provider"
 ---
 
 {/*Auto-generated file. Do not edit.*/}
@@ -11,6 +11,6 @@ description: "Index of all the data-sources supported by the Teleport Terraform 
     The template name is reserved by tfplugindocs so we suffix with -index.
 */}
 
-The Teleport Terraform provider supports the following data-sources:
+The Teleport MWI Terraform provider supports the following data-sources:
 
   - [`teleportmwi_kubernetes`](./kubernetes.mdx)
