--- a/docs/pages/reference/terraform-provider-mwi/data-sources/kubernetes.mdx
+++ b/docs/pages/reference/terraform-provider-mwi/data-sources/kubernetes.mdx
@@ -1,7 +1,7 @@
 ---
 title: Reference for the teleportmwi_kubernetes Terraform data-source
 sidebar_label: kubernetes
-description: This page describes the supported values of the teleportmwi_kubernetes data-source of the Teleport Terraform provider.
+description: This page describes the supported values of the teleportmwi_kubernetes data-source of the Teleport MWI Terraform provider.
 ---
 
 {/*Auto-generated file. Do not edit.*/}
