--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/argocd-helm.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/argocd-helm.mdx
@@ -9,13 +9,11 @@ and ArgoCD.
 
 ## How it works
 
-The 'teleport-kube-agent' chart is a Teleport agent used to register any or all of the following services
-with an existing Teleport cluster:
-- Teleport Kubernetes access
-- Teleport Application access
-- Teleport Database access
-- Teleport Kubernetes App Discovery
-- Teleport Jamf service
+AArgo CD is a declarative, GitOps continuous delivery tool for Kubernetes. This is used to orchestrate large deployments, and avoid the Kubernetes resources to drift from the desired deployment.
+
+Teleport has [an official Helm chart (`teleport-kube-agent`)](../../../reference/helm-reference/teleport-kube-agent.mdx) that deploys a Teleport agent in a Kubernetes cluster. The agent can be configured to run several services, but by default it runs the `kubernetes_sevrice` to provide access to the Kubernetes API via Teleport.
+
+This guide leverages ArgoCD's native Helm support to deploy the Teleport agent using the `teleport-kube-agent` Helm chart.
 
 ## Prerequisites
 
