--- a/docs/pages/reference/helm-reference/teleport-kube-agent.mdx
+++ b/docs/pages/reference/helm-reference/teleport-kube-agent.mdx
@@ -1,5 +1,6 @@
 ---
 title: teleport-kube-agent Chart Reference
+sidebar_label: teleport-kube-agent
 description: Values that can be set using the teleport-kube-agent Helm chart
 ---
 
