--- a/docs/pages/core-concepts.mdx
+++ b/docs/pages/core-concepts.mdx
@@ -261,4 +261,4 @@ All client tools ultimately interact with the Auth and Proxy services, which ser
 | Teleport Connect | GUI application for accessing servers, databases, apps, and desktops.  GUI-based daily access for engineers | GUI-based daily access for engineers |
 
 Further reading:
-- [Introduction to Teleport clients](../../connect-your-client/introduction.mdx) Authenticate to Teleport and access protected resources. Designed for end users with links to additional documentation.
+- [Introduction to Teleport clients](./connect-your-client/connect-your-client.mdx) Authenticate to Teleport and access protected resources. Designed for end users with links to additional documentation.
