Apply suggestions from code review
Co-authored-by: Rafał Cieślak <rafal.cieslak@goteleport.com>

--- a/docs/pages/connect-your-client/vnet.mdx
+++ b/docs/pages/connect-your-client/vnet.mdx
@@ -36,7 +36,7 @@ for Linux support in a future version.
 VNet's VPN-like experience for app access means that any software running on
 the client machine can access Teleport apps at local DNS or IP addresses.
 
-**Avoid running VNet on shared or multi-user hosts.**
+**Avoid running VNet on shared or multi-user machines.**
 If multiple OS users share the same machine, any user could access Teleport TCP
 apps at their local VNet DNS or IP address.
 
