--- a/docs/pages/reference/join-methods.mdx
+++ b/docs/pages/reference/join-methods.mdx
@@ -273,7 +273,7 @@ on-prem deployments
 (!docs/pages/includes/provision-token/bound-keypair-spec.mdx!)
 
 <Admonition type="note" title="See Also">
-- [Deploying Machine ID on Bare-metal Nodes with Bound Keypair joining](../machine-workload-identity/machine-id/deployment/bound-keypair.mdx)
+- [Deploying Machine ID with Bound Keypair joining](../machine-workload-identity/machine-id/deployment/bound-keypair.mdx)
 - [Bound Keypair Reference and Admin Guide](./machine-id/bound-keypair.mdx)
 </Admonition>
 
