--- a/docs/pages/reference/machine-id/configuration.mdx
+++ b/docs/pages/reference/machine-id/configuration.mdx
@@ -121,6 +121,11 @@ onboarding:
     # multiple Teleport clusters from a single GitLab CI job.
     token_env_var_name: "MY_GITLAB_ID_TOKEN"
 
+  # bound_keypair holds parameters specific to the "bound_keypair" join method
+  bound_keypair:
+    # registration_secret is an optional secret to use on first join in lieu of
+    # a preregistered keypair.
+    registration_secret: "secret"
 
 # storage specifies the destination that `tbot` should use to store its
 # internal state. This state is sensitive, and you should ensure that the
@@ -216,7 +221,7 @@ output used in context.
 # always be `identity`.
 type: identity
 # ssh_config controls whether the identity output will attempt to generate an
-# OpenSSH configuration file. This requires that `tbot` can connect to the 
+# OpenSSH configuration file. This requires that `tbot` can connect to the
 # Teleport Proxy Service. Must be "on" or "off". If unspecified, this defaults to
 # "on".
 ssh_config: on
