addressing amplify issues

--- a/docs/pages/includes/device-trust/prereqs.mdx
+++ b/docs/pages/includes/device-trust/prereqs.mdx
@@ -1,6 +1,6 @@
 - To enroll a macOS device, you need:
   - A signed and notarized `tsh` binary.
-    [Download the macOS tsh installer](../../installation/macos.mdx).
+    [Download the macOS tsh installer](../../includes/cloud/install-macos.mdx).
 - To enroll a Windows device, you need:
   - A device with TPM 2.0.
   - A user with administrator privileges. This is only required during enrollment.
@@ -9,10 +9,10 @@
   - A device with TPM 2.0.
   - A user with permissions to use the /dev/tpmrm0 device (typically done by
     assigning the `tss` group to the user).
-  - The `tsh` client. [Install tsh for Linux](../../installation/linux.mdx).
+  - The `tsh` client. [Install tsh for Linux](../install-linux.mdx).
 
     WSL users should use the Windows binary instead.
-    [Download the Windows tsh installer](../../installation/windows.mdx).
+    [Download the Windows tsh installer](../install-windows.mdx).
 
 - To authenticate a Web UI session you need [Teleport Connect](
   ../../connect-your-client/teleport-connect.mdx#installation--upgrade)
