--- a/docs/pages/enroll-resources/database-access/enroll-self-hosted-databases/sql-server-ad-pkinit.mdx
+++ b/docs/pages/enroll-resources/database-access/enroll-self-hosted-databases/sql-server-ad-pkinit.mdx
@@ -87,7 +87,7 @@ You will need to repeat these steps if you rotate Teleport's database certificat
    $ tctl auth crl --type=db_client > db-ca.crl
    ```
 
-   If you use HSM there are multiple CRLs that have to be exported.
+   If you use HSM, there are multiple CRLs that have to be exported.
    This can be done by running:
 
    ```code
@@ -177,7 +177,7 @@ Teleport CRL to your Active Directory domain (using the path to the exported
 certutil -dspublish -f <PathToCRLFile.crl> TeleportDB
 ```
 
-If you use HSM run commands printed at the end of the CRL export. They will in form of:
+If you use HSM, run commands printed at the end of the CRL export. They will in form of:
 
 ```powershell
 certutil -dspublish -f <PathToCRLFile.crl> TeleportDB <CRLCommonName>
