--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/argocd-helm.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/argocd-helm.mdx
@@ -9,7 +9,7 @@ and ArgoCD.
 
 ## How it works
 
-AArgo CD is a declarative, GitOps continuous delivery tool for Kubernetes. This is used to orchestrate large deployments, and avoid the Kubernetes resources to drift from the desired deployment.
+Argo CD is a declarative, GitOps continuous delivery tool for Kubernetes. This is used to orchestrate large deployments, and avoid the Kubernetes resources to drift from the desired deployment.
 
 Teleport has [an official Helm chart (`teleport-kube-agent`)](../../../reference/helm-reference/teleport-kube-agent.mdx) that deploys a Teleport agent in a Kubernetes cluster. The agent can be configured to run several services, but by default it runs the `kubernetes_sevrice` to provide access to the Kubernetes API via Teleport.
 
