Clarify that teams app id is a required field

--- a/docs/pages/identity-governance/access-request-plugins/ssh-approval-msteams.mdx
+++ b/docs/pages/identity-governance/access-request-plugins/ssh-approval-msteams.mdx
@@ -205,7 +205,7 @@ This should result in a config file like the one below:
 (!examples/resources/plugins/teleport-msteams.toml!)
 ```
 
-The `teams_app_id` is a UUID you can specify that will be used as an identifier
+The `teams_app_id` is a UUID you must specify that will be used as an identifier
 for the app's manifest within Teams.
 
 Copy the `/var/lib/teleport/plugins/msteams/assets/app.zip` file to your local
