post-feedback changes

--- a/docs/pages/core-concepts.mdx
+++ b/docs/pages/core-concepts.mdx
@@ -121,7 +121,7 @@ Service](./enroll-resources/desktop-access/introduction.mdx).
 
 ### Teleport Jamf Service
 
-The `jamf_service` integrates with Jamf to enforce device trust policies for macOS endpoints. Before a user is granted access, Teleport checks the device's compliance status with Jamf. This service is ideal for organizations that need to verify macOS device posture as part of their access control strategy, ensuring only trusted devices are allowed to connect. [Read more about the Jamf Service](./identity-governance/device-trust/jamf-integration.mdx).
+The `jamf_service` integrates with Jamf to enrolls trusted devices for macOS endpoints. Before a user is granted access, Teleport checks the device's compliance status with Jamf. This service is ideal for organizations that need to verify macOS device posture as part of their access control strategy, ensuring only trusted devices are allowed to connect. [Read more about the Jamf Service](./identity-governance/device-trust/jamf-integration.mdx).
 
 ### Teleport Debug Service
 
