amplify link issue

--- a/docs/pages/includes/device-trust/prereqs.mdx
+++ b/docs/pages/includes/device-trust/prereqs.mdx
@@ -1,6 +1,6 @@
 - To enroll a macOS device, you need:
   - A signed and notarized `tsh` binary.
-    [Download the macOS tsh installer](../../includes/cloud/install-macos.mdx).
+    [Download the macOS tsh installer](../../installation/macos.mdx).
 - To enroll a Windows device, you need:
   - A device with TPM 2.0.
   - A user with administrator privileges. This is only required during enrollment.
