--- a/docs/pages/machine-workload-identity/machine-id/deployment/bound-keypair.mdx
+++ b/docs/pages/machine-workload-identity/machine-id/deployment/bound-keypair.mdx
@@ -28,7 +28,9 @@ then configured to trust this public key for future joining attempts.
 Later, when the bot attempts to join the cluster, Teleport issues it a challenge
 that can only be completed using its private key. The bot returns the solved
 challenge, attesting to its own identity, and is conditionally allowed to join
-the cluster.
+the cluster. This process is repeated for every join attempt, but if the bot has
+been offline long enough for its certificates to expire, it is additionally
+forced to perform an automatic recovery to join again.
 
 As self attestation is inherently less secure than the external verification
 that would be provided by a cloud provider like AWS or a dedicated TPM, Bound
@@ -38,8 +40,8 @@ including:
   duplicated
 - Certificate generation counter checks to ensure regular bot certificates
   cannot be usefully shared or duplicated
-- Configurable limits on how often - if at all - bots may be allowed to recover
-  using this keypair
+- Configurable limits on how often - if at all - bots may be allowed to
+  automatically recover using this keypair
 
 An important benefit to Bound Keypair Joining is that all joining restrictions
 can be reconfigured at any time, and bots that expire or go offline can be
