Address Hugo's feedback

--- a/docs/pages/reference/terraform-provider-mwi/terraform-provider-mwi.mdx
+++ b/docs/pages/reference/terraform-provider-mwi/terraform-provider-mwi.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Teleport MWI Terraform Provider"
 description: Reference documentation of the Teleport MWI Terraform provider.
+labels:
+  - reference
+  - mwi
 ---
 
 {/*Auto-generated file. Do not edit.*/}
