--- a/docs/pages/reference/terraform-provider-mwi/ephemeral-resources/ephemeral-resources.mdx
+++ b/docs/pages/reference/terraform-provider-mwi/ephemeral-resources/ephemeral-resources.mdx
@@ -1,6 +1,9 @@
 ---
-title: "Terraform ephemeral resources index"
+title: "MWI Terraform ephemeral resources index"
 description: "Index of all the resources supported by the Teleport MWI Terraform Provider"
+labels:
+  - reference
+  - mwi
 ---
 
 {/*Auto-generated file. Do not edit.*/}
@@ -10,6 +13,17 @@ description: "Index of all the resources supported by the Teleport MWI Terraform
     This file will be renamed ephemeral-resources.mdx during build time.
     The template name is reserved by tfplugindocs so we suffix with -index.
 */}
+
+<Admonition type="info">
+This is reference page is for the Teleport MWI Terraform provider, which
+generates short-lived credentials using Teleport Machine & Workload Identity.
+These short-lived credentials can be used to grant other Terraform providers
+access to resources through Teleport.
+
+If you are looking to manage the configuration of Teleport itself, use the
+[Teleport Terraform Provider](../../terraform-provider/terraform-provider.mdx)
+instead.
+</Admonition>
 
 The Teleport MWI Terraform provider supports the following ephemeral resources:
 
