--- a/docs/pages/reference/terraform-provider-mwi/ephemeral-resources/kubernetes.mdx
+++ b/docs/pages/reference/terraform-provider-mwi/ephemeral-resources/kubernetes.mdx
@@ -2,6 +2,9 @@
 title: Reference for the teleportmwi_kubernetes Terraform ephemeral resource
 sidebar_label: kubernetes
 description: This page describes the supported values of the teleportmwi_kubernetes ephemeral resource of the Teleport MWI Terraform provider.
+labels:
+  - reference
+  - mwi
 ---
 
 {/*Auto-generated file. Do not edit.*/}
