Update examples with warning

--- a/docs/pages/reference/terraform-provider-mwi/ephemeral-resources/kubernetes.mdx
+++ b/docs/pages/reference/terraform-provider-mwi/ephemeral-resources/kubernetes.mdx
@@ -18,6 +18,9 @@ The Kubernetes Ephemeral Resource provides credentials to allow other providers 
 ## Example Usage
 
 ```hcl
+// Warning: The teleportmwi_kubernetes ephemeral resource will not function
+// correctly when the Teleport cluster is fronted by a L7 load balancer that
+// terminates TLS.
 ephemeral "teleportmwi_kubernetes" "my_cluster" {
   selector = {
     name = "my-k8s-cluster"
