--- a/docs/pages/reference/terraform-provider-mwi/data-sources/kubernetes.mdx
+++ b/docs/pages/reference/terraform-provider-mwi/data-sources/kubernetes.mdx
@@ -15,6 +15,9 @@ The Kubernetes data source provides credentials to allow other providers to acce
 ## Example Usage
 
 ```hcl
+// Warning: The teleportmwi_kubernetes data source will not function correctly
+// when the Teleport cluster is fronted by a L7 load balancer that terminates
+// TLS.
 data "teleportmwi_kubernetes" "my_cluster" {
   selector = {
     name = "my-k8s-cluster"
