run  make -C integrations/operator crd

--- a/docs/pages/reference/operator-resources/resources-teleport-dev-rolesv6.mdx
+++ b/docs/pages/reference/operator-resources/resources-teleport-dev-rolesv6.mdx
@@ -190,10 +190,19 @@ resource, which you can apply after installing the Teleport Kubernetes operator.
 
 |Field|Type|Description|
 |---|---|---|
+|claims_to_preview_as_roles|[][object](#specallowreview_requestsclaims_to_preview_as_roles-items)|ClaimsToPreviewAsRoles specifies a mapping from claims (traits) to teleport roles.|
 |claims_to_roles|[][object](#specallowreview_requestsclaims_to_roles-items)|ClaimsToRoles specifies a mapping from claims (traits) to teleport roles.|
 |preview_as_roles|[]string|PreviewAsRoles is a list of extra roles which should apply to a reviewer while they are viewing a Resource Access Request for the purposes of viewing details such as the hostname and labels of requested resources.|
 |roles|[]string|Roles is the name of roles which may be reviewed.|
 |where|string|Where is an optional predicate which further limits which requests are reviewable.|
+
+### spec.allow.review_requests.claims_to_preview_as_roles items
+
+|Field|Type|Description|
+|---|---|---|
+|claim|string|Claim is a claim name.|
+|roles|[]string|Roles is a list of static teleport roles to match.|
+|value|string|Value is a claim value to match.|
 
 ### spec.allow.review_requests.claims_to_roles items
 
@@ -380,10 +389,19 @@ resource, which you can apply after installing the Teleport Kubernetes operator.
 
 |Field|Type|Description|
 |---|---|---|
+|claims_to_preview_as_roles|[][object](#specdenyreview_requestsclaims_to_preview_as_roles-items)|ClaimsToPreviewAsRoles specifies a mapping from claims (traits) to teleport roles.|
 |claims_to_roles|[][object](#specdenyreview_requestsclaims_to_roles-items)|ClaimsToRoles specifies a mapping from claims (traits) to teleport roles.|
 |preview_as_roles|[]string|PreviewAsRoles is a list of extra roles which should apply to a reviewer while they are viewing a Resource Access Request for the purposes of viewing details such as the hostname and labels of requested resources.|
 |roles|[]string|Roles is the name of roles which may be reviewed.|
 |where|string|Where is an optional predicate which further limits which requests are reviewable.|
+
+### spec.deny.review_requests.claims_to_preview_as_roles items
+
+|Field|Type|Description|
+|---|---|---|
+|claim|string|Claim is a claim name.|
+|roles|[]string|Roles is a list of static teleport roles to match.|
+|value|string|Value is a claim value to match.|
 
 ### spec.deny.review_requests.claims_to_roles items
 
